--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.13",
     "@ai-sdk/react": "^3.0.51",
+    "@convex-dev/better-auth": "^0.10.10",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -19,8 +20,10 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "ai": "^6.0.49",
+    "better-auth": "1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.7",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.563.0",
     "mini-svg-data-uri": "^1.4.4",
